--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dhaval Makwana - Project Manager and Agile Expert. Specializing in AI product development, agile project management, and cross-functional team leadership.">
-    <meta name="keywords" content="Dhaval, Dhaval Makwana, Agile Project Management, Project Manager, Product Owner, AI, Artificial Intelligence, Cross-functional Team Leadership, Stakeholder Management, Data-driven Decision Making">
+    <meta name="keywords" content="Dhaval, Dhaval Makwana, Product Manager, Skilled Project management, Agile Project Management, Project Manager, Product Owner, AI, Artificial Intelligence, Cross-functional Team Leadership, Stakeholder Management, Data-driven Decision Making">
     <meta name="author" content="Dhaval Makwana">
     <title>Dhaval Makwana - Project Manager</title>
-
+    <link rel="icon" href="Images/download.jpeg" type="image/jpeg">
     <meta property="og:title" content="Dhaval Makwana - Project Manager">
     <meta property="og:description" content="Dhaval Makwana is a project manager specializing in AI product development and agile project management.">
     <meta property="og:image" content="https://github.com/Dhaval-info-1/Dhaval-Makwana/blob/main/images/7c.jpg">
@@ -103,7 +103,7 @@
       gtag('config', 'G-D9G57V0S93');
     </script>
     <script>
-      window.chatBotConfig = {agentId: 242}
+      window.chatBotConfig = {agentId: 152}
     </script>
     <script
       defer
@@ -139,8 +139,6 @@
     }
     </script>
 
-    <link rel="icon" href="/Images/download.jpeg" type="image/x-icon">
-    
     <link rel="sitemap" type="application/xml" href="https://dhaval-info-1.github.io/Dhaval-Makwana/sitemap.xml">
     <link rel="canonical" href="https://dhaval-info-1.github.io/Dhaval-Makwana/">
     <meta name="robots" content="index, follow">
