--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <script
       defer
       id="chatbot-widget-script"
-      src="https://dev.swiftsupport.ai/ChatbotScripts/chatbotBubble.js">
+      src="https://app.swiftsupport.ai/ChatbotScripts/chatbotBubble.js">
     </script>
     <script type="application/ld+json">
     {
